# DiscordPyWrapper

./: DMOBJ.py  README.md  keep_alive.py  lines.txt  log.txt  main.py  money.json  pyproject.toml  spam.json
.upm/: store.json
discord/: Discord.py  DiscordOath.py
discord/authobjects/: Access.py  User.py
discord/dobjects/: Channel.py  Context.py  DM.py  Invite.py  Member.py  Reaction.py  Role.py
static/javascript/: autocomp.js
static/styles/: style.css
templates/: 404.html  contact.html  gaming.html  index.html  leaderboard.html  login.html  logs.html  shop.html
