[tool.poetry]
name = "dcbotapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
configparser = "^5.0.2"
wsaccel = "^0.6.3"
praw = "^7.2.0"
Zenora = "^0.0.2"
twilio = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
